[package]
name = "libreoffice-rs"
version = "0.3.2"
edition = "2021"
description = "Rust binding for LibreOfficeKit"
keywords = ["LibreOfficeKit", "lok", "ffi"]
authors = ["Sean Pan <orin.kakhan@gmail.com>"]
repository = "https://github.com/undeflife/libreoffice-rs"
license = "Apache-2.0"
codegen-units=1

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
url = "2.2.2"

[build-dependencies]
bindgen = { version = "0.64.0", default-features = false, features = ["static"] }


[features]
default = []
unstable = []
